--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,10 +3,9 @@
   background-color: transparent;
   background: none;
   position: fixed;
-  width: 100vw;
+  width: 100%;
   top: 0;
   margin: 15px;
-  margin-top: 15px;
   z-index: 100;
 }
 .headerLogo {
@@ -29,5 +28,6 @@
   text-transform: uppercase;
 }
 .headerRight > p {
-  margin: 10px;
+  margin: 5px;
+  padding-right: 20px;
 }
